[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velobase-billing"
dynamic = ["version"]
description = "Velobase Billing SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Velobase" }]
keywords = ["velobase", "billing", "credits", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/velobase/velobase-billing-python"
Repository = "https://github.com/velobase/velobase-billing-python"

[tool.hatch.version]
path = "src/velobase_billing/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/velobase_billing"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE", "pyproject.toml"]
